--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -289,12 +289,74 @@ ul, li {
   margin-top: 10px;
 }
 
-.line_footer{
+.line_footer {
   display: inline-block;
   margin: 0 10px;
   height: 48px;
   width: 0px;
   border: 1px solid #4F4F4F;
+}
+
+/* Стили для формы обратной связи */
+
+.feedback {
+  color: #4F4F4F;
+	box-shadow: 0 0 10px #d2e6fa;
+  border: solid 1px #d3d2d2;
+	border-radius: 5px;
+	margin-bottom: 50px;
+	padding: 10px;
+  height: auto;
+	width: auto;
+}
+
+.input {
+  height: 35px;
+  border: 1px solid #9e9d9d;
+}
+
+.text-feedback {
+  border: 1px solid #9e9d9d;
+}
+
+.feedback .input,textarea { 
+	border-radius: 5px;
+	width: 100%;
+}
+
+.form-sbm {
+  width: 140px;
+	height: 40px;
+	border: none;
+  color: #FFFFFF;
+  background: #4F4F4F;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.feedback h2 {
+	text-align: center;
+  color: #4F4F4F;
+}
+
+.info_feed {
+  color: #4F4F4F;
+  font-size: 18px;
+  border: 1px solid #d3d2d2;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+  background-color: #B5DAFF;
+}
+
+.info_danger {
+  color: #4F4F4F;
+  font-size: 18px;
+  border: 1px solid #d3d2d2;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px;
+  background-color: #f38787;
 }
 
   
