--- a/public/assets/admin-style/css/main.css
+++ b/public/assets/admin-style/css/main.css
@@ -119,6 +119,65 @@ a {
     width: 100%;
 }
 
+.search {
+    display: inline-block;
+    margin: 20px 40px;
+}
+
+.search-form {
+    position: relative;
+    width: 400px;
+}
+
+.search input {
+    width: 794px;
+    height: 62px;
+    padding-left: 10px;
+    border: none;
+    border-radius: 6px;
+    outline: none;
+    box-shadow: 0px 5px 30px rgb(212, 212, 212);
+    background: #FFFFFF;
+    font-size: 16px;
+    color: #BDBDBD;
+}
+
+.search button {
+    position: absolute;
+    top: 4px;
+    left: 672px;
+    width: 117px;
+    height: 54px;
+    border: none;
+    color: #FFFFFF;
+    background: #4F4F4F;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.fa-search {
+    font-size: 18px;
+} 
+
+.post_categories {
+    display: flex;
+    list-style: none;
+}
+
+.post_categories li {
+    margin: 5px;
+}
+
+.post_categories a {
+    color: #e7e6e6;
+}
+
+.post_categories .btn {
+    background-color: #0067D0;
+    height: 25px;
+    border-radius: 20px;
+}
+
 /* footer */
 
 .footer {
@@ -179,7 +238,7 @@ a {
 .main-table {
     width: 1170px;
     justify-content: center;
-    padding: 50px;
+    margin: 50px 0px;
 }
 
 table {
@@ -233,7 +292,8 @@ tr:nth-child(odd) {
 /* content */
 
 .heading-h {
-    margin-top: 20px;
+    display: inline-block;
+    margin-top: 10px;
     margin-left: 40px;
     color: #585858;
 }
@@ -277,7 +337,7 @@ tr:nth-child(odd) {
 .text-field__input {
     display: block;
     width: 100%;
-    height: calc(2.25rem + 2px);
+    height: calc(2.25rem + 5px);
     padding: 0.375rem 0.75rem;
     font-family: inherit;
     font-size: 1rem;
@@ -292,10 +352,6 @@ tr:nth-child(odd) {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-}
-
-.text-field__input[type="search"]::-webkit-search-decoration, .text-field__input[type="search"]::-webkit-search-cancel-button, .text-field__input[type="search"]::-webkit-search-results-button, .text-field__input[type="search"]::-webkit-search-results-decoration {
-    -webkit-appearance: none;
 }
 
 .text-field__input::placeholder {
@@ -439,6 +495,13 @@ tr:nth-child(odd) {
     margin-top: 20px;
 }
 
+.mb-20 {
+    margin-bottom: 20px;
+}
+
+.fs-14 {
+    font-size: 14px;
+}
 /* blok for form-create */
 
 .create-cat {
@@ -516,4 +579,22 @@ tr:nth-child(odd) {
     justify-content: center;
     border-radius: 3px 0px 0px 3px;
     cursor: pointer;
+}
+
+.feedback-info {
+
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    color: #212529;
+    background-color: rgb(241, 241, 241);
+    border: 1px solid #bdbdbd;
+    border-radius: 4px;
+    margin: 10px 0;
+    max-width: 600px;
+}
+
+.feed-single {
+    display: grid;
+    justify-content: center;
 }
