--- a/public/assets/admin-style/css/main.css
+++ b/public/assets/admin-style/css/main.css
@@ -34,7 +34,7 @@ a {
 .header {
     background-color: #f3f3f3;
     display: flex;
-    width: 100%;
+    
     height: 70px;
     box-shadow: 0 0px 10px #adadad;
     flex-wrap: wrap;
@@ -129,9 +129,9 @@ a {
     width: 400px;
 }
 
-.search input {
+.search-input {
     width: 794px;
-    height: 62px;
+    height: 52px;
     padding-left: 10px;
     border: none;
     border-radius: 6px;
@@ -142,12 +142,12 @@ a {
     color: #BDBDBD;
 }
 
-.search button {
+.search-button {
     position: absolute;
     top: 4px;
     left: 672px;
     width: 117px;
-    height: 54px;
+    height: 44px;
     border: none;
     color: #FFFFFF;
     background: #4F4F4F;
@@ -238,7 +238,8 @@ a {
 .main-table {
     width: 1170px;
     justify-content: center;
-    margin: 50px 0px;
+    margin-bottom: 50px;
+    margin-top: 10px;
 }
 
 table {
@@ -294,7 +295,6 @@ tr:nth-child(odd) {
 .heading-h {
     display: inline-block;
     margin-top: 10px;
-    margin-left: 40px;
     color: #585858;
 }
 
@@ -454,8 +454,7 @@ tr:nth-child(odd) {
 
 .sub-block {
     display: block;
-    margin-left: 40px;
-    margin-bottom: 40px;
+    margin-top: 30px;
 }
 
 .single-btn {
@@ -584,6 +583,7 @@ tr:nth-child(odd) {
 
 .feedback-info {
     width: 100%;
+    min-width: 400px;
     padding: 10px;
     font-size: 16px;
     color: #212529;
@@ -618,3 +618,61 @@ tr:nth-child(odd) {
     margin: 10px;
     background-color: #f38787;
 }
+ 
+.pagination {
+    display: flex;
+    justify-content: center;
+    
+  }
+  .pagination li {
+    display: inline-block;
+    border: none;
+  }
+  .pagination li:hover {
+    border: none;
+  }
+  .pagination>li>a, .pagination>li>span{
+    font-size: 14px;
+    color: #111;
+    border: none;
+    float: none;
+    font-weight: bold;
+    background-color: #eee;
+    margin: 0;
+    line-height: 100%;
+    padding: 8px 10px;
+  }
+  .pagination li.active span {
+    color: #eee;
+    float: none;
+    border: none; 
+    border-radius: 2px;
+  }
+  .pagination li:hover a {
+    color: #111;
+    border: none;
+  }
+  .pagination li:first-child a {
+    color: #0067D0;
+    border-right: 1px solid rgba(0,0,0, .05);
+  }
+  .pagination li:last-child a {
+    color: #0067D0;
+    border-left: 1px solid rgba(0,0,0, .05);
+  }
+  .pagination li:first-child a:hover {
+    border-right: 1px solid transparent;
+  }
+  .pagination li:last-child a:hover {
+    border-left: 1px solid transparent;
+  }
+  .pagination>li>a:focus, .pagination>li>a:hover, .pagination>li>span:focus, .pagination>li>span:hover {
+    color: #111;
+    border: none;
+  }
+  .pagination>.active{
+    background-color: #eee;
+  }
+  .pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover {
+    background-color: #0067D0;
+  }
